BACKGROUND PROBLEM SOLVE
1.BACKGROUND NOT SHOWING PROBLEM SOLVE BY ADDING =  (../)
NOW=background-image: url(../img/land.svg), url(../img/cloud.svg), url(../img/cloud.svg);
PRE=background-image: url(/img/land.svg), url(/img/cloud.svg), url(/img/cloud.svg);

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ a {
     border: 1px solid #46b29b;
     border-radius: 50%;
     position: relative;
-    background-image: url(/img/design-icons-vert@2x.png);
+    background-image: url(../img/design-icons-vert@2x.png);
     background-repeat: no-repeat;
     background-position: 0 0;
     background-size: cover;
@@ -35,16 +35,16 @@ a {
     border: 1px solid #46b29b;
     border-radius: 50%;
     position: relative;
-    background-image: url(/img/dev-icons-vert@2x.png);
+    background-image: url(../img/dev-icons-vert@2x.png);
     background-repeat: no-repeat;
     background-position: 0px 0px;
     background-size: cover;
 }
 
-.sprit:hover {
+/* .sprit:hover {
     background-position: 0 -62px;
     transition: 0.5s;
-}
+} */
 
 .container {
     max-width: 970px;
@@ -117,7 +117,7 @@ header .container nav .menu ul li a:hover::after{
 
 /****************** banner************* */
 header .container .banner {
-    background-image: url(/img/land.svg), url(/img/cloud.svg), url(/img/cloud.svg);
+    background-image: url(../img/land.svg), url(../img/cloud.svg), url(../img/cloud.svg);
     background-repeat: no-repeat;
     background-position: bottom center, left center, right top;
     color: #4ab19a;
@@ -429,6 +429,12 @@ section:hover h2{
     background: #4ab19a;
     font-size: 1.2em;
     
+}
+.fotter .form .btn a:hover{
+    transform: scaleX(1.5);
+    transform-origin: left center;
+    transition: 0.6s;
+    background: chocolate;
 }
 
 
